tests/qml/invalid/ParseError.qml
import QtQuick 2.5

Item {
  properly int error: 11
}
